<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#575252"
    tools:context=".renkler">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gri" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="181dp"
        android:text="@string/gri"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/mavi" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="181dp"
        android:text="@string/mavi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/sari" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="125dp"
        android:layout_height="29dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="176dp"
        android:text="@string/sari"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/pembe" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="181dp"
        android:text="@string/pembe"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:srcCompat="@drawable/turuncu" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="181dp"
        android:text="@string/turuncu"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:srcCompat="@drawable/mor" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="181dp"
        android:text="@string/mor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:srcCompat="@drawable/yesil" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="181dp"
        android:text="@string/yesil"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        app:srcCompat="@drawable/siyah" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="180dp"
        android:text="@string/siyah"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19"
        app:srcCompat="@drawable/beyaz" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="181dp"
        android:text="@string/beyaz"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/kahverengi" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="181dp"
        android:text="@string/kahverengi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />
</androidx.constraintlayout.widget.ConstraintLayout>