<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#575252"
    tools:context=".meyveler">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ananas" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="156dp"
        android:text="@string/ananas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView22"
        app:srcCompat="@drawable/armut" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="156dp"
        android:text="@string/armut"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/cilek" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="156dp"
        android:text="@string/cilek"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView24"
        app:srcCompat="@drawable/elma" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="157dp"
        android:text="@string/elma"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25"
        app:srcCompat="@drawable/karpuz" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="156dp"
        android:text="@string/karpuz"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView26"
        app:srcCompat="@drawable/kayisi" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="157dp"
        android:text="@string/kayisi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView27"
        app:srcCompat="@drawable/limon" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="157dp"
        android:text="@string/limon"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView28"
        app:srcCompat="@drawable/muz" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="164dp"
        android:text="@string/muz"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView29"
        app:srcCompat="@drawable/portakal" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="164dp"
        android:text="@string/portakal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="89dp"
        android:layout_height="69dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView30"
        app:srcCompat="@drawable/seftali" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="164dp"
        android:text="@string/seftali"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />
</androidx.constraintlayout.widget.ConstraintLayout>