<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#575252"
    tools:context=".meslekler">

    <TextView
        android:id="@+id/ogretmen"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="54dp"
        android:text="@string/ogretmen"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ogretmen" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/doktor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="54dp"
        android:text="@string/doktor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ogretmen" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/polis" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="54dp"
        android:text="@string/polis"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/kaptan" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="54dp"
        android:text="@string/kaptan"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/ciftci" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="54dp"
        android:text="@string/ciftci"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/itfaiyeci" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="54dp"
        android:text="@string/itfaiyeci"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/asker" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="54dp"
        android:text="@string/asker"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/bahcivan" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="54dp"
        android:text="@string/bahcıva"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/firin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="54dp"
        android:text="@string/firinci"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/avukat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="54dp"
        android:text="@string/avukat"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>